# donald-duck

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  run-clang-format.py  vf3_patch.patch
.github/workflows/: build_test_cmake.yml  build_test_pyproject.yml  codeql.yml  docs.yml  license_headers.yml  lint_black.yml  lint_clang.yml
ICSA/: README.md
ICSA/cities/: cities.cpp  cities.h  cities.py
ICSA/dnn/: report_results.py
ICSA/dnn/results/: results.csv
ICSA/ghlchem/: benchmark.py  get_mols.sh  ghl_chem.cpp  ghl_chem.h
ICSA/isomorphisms/: benchmark.py  benchmark_libraries.sh  generate_analysis.ipynb  ghl_profiler.py  graphtool_profiler.py  igraph_profiler_vf2.py  networkx_profiler_vf2.py  run_profiler.sh  utils.py
ICSA/isomorphisms/results/: ghl_profiler.csv  graphtool_profiler.csv  igraph_profiler_vf2.csv  networkx_profiler_vf2.csv
ICSA/listing/: listing.cpp  listing.py
ICSA/si/: get_si.sh
ICSA/vf2_vf3/: CMakeLists.txt  report_results.py  run_vf3_vf2_profile.sh  vf3_vs_vf2.cpp
ICSA/vf2_vf3/results/: aborted_results.csv  mismatches.csv  perf_results.csv
cmake/: GitUtils.cmake  Utils.cmake  headers.cmake
docs/: conf.py
examples/cpp/: 01_graph.cpp  02_isomorphism.cpp  03_subgraph.cpp  04_insert_hub.cpp  CMakeLists.txt  city.h  map_graph.h
examples/python/directed_city/: city.py  ghl_city.cpp  ghl_city.h
examples/python/undirected_city/: city.py  ghl_city.cpp  ghl_city.h
examples/standalone_project/: 02_isomorphism.cpp  CMakeLists.txt  README.md  city.h  map_graph.h
include/ghl/: ghl.h  ghl_isomorphisms.h  ghl_subgraphs.h
include/ghl/bindings/: graph_bindings.cpp  graph_bindings.h
include/ghl/cereal/: cereal.h  forward_decl.h  pybind11.cpp  pybind11.h
include/ghl/graph/: base_node.h  graph.h  primitive_edge.h  pybind11_fwd_decl.h  subgraph.h
include/ghl/isomorphism/: apply_isomorphism.h  graph_isomorphisms.h
include/ghl/serialization/: graph_serialization.h
python_project/graph_hook_library/: __init__.py  cppimport.py
tests/cpp/: CMakeLists.txt  test_graph.cpp  test_isomorphisms.cpp  test_serialization.cpp  test_subgraphs.cpp  test_vf3_isomorphisms.cpp
tests/python/: test_bindings.py
