# Copyright (c) 2025 IBM
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[build-system]
requires = [
    "py-build-cmake~=0.6.0a2",
    "pybind11-stubgen~=2.5.5",
    "ninja>=1.10",
    "cmake>=3.16"
]
build-backend = "py_build_cmake.build"

[project]
name = "graph_hook_library"
version = "0.1.0"
description = "Python bindings for the Graph Hook Library"
authors = [{ name = "IBM" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.py-build-cmake.sdist]
include = [
    "README.md",
    "CMakeLists.txt",
    "cmake",
    "include",
    "tests",
    "python_project"
]

[tool.py-build-cmake.module]
name = "graph_hook_library"
directory = "python_project"

[tool.py-build-cmake.cmake]
minimum_version = "3.16"
source_path = "."
build_type = "Release"
args = [
    "-DGHL_SERIALIZATION=ON",
    "-DGHL_BINDINGS=ON"
]

[tool.py-build-cmake.stubgen]
modules = ["graph_hook_library"]
