function(add_example name)
    add_executable(${name} ${ARGN})
    foreach(boost_lib ${BOOST_INCLUDE_LIBRARIES})
        if(TARGET Boost::${boost_lib})
            target_link_libraries(${name} PRIVATE Boost::${boost_lib})
        endif()
    endforeach()
    if(GHL_BINDINGS)
        target_link_libraries(${name} PUBLIC ${Python3_LIBRARIES})
    endif()
    target_link_libraries(${name} PRIVATE ghl::ghl)
endfunction()

file(GLOB BENCHMARK_SOURCES "*.cpp")
foreach(benchmark_file ${BENCHMARK_SOURCES})
    get_filename_component(benchmark_name ${benchmark_file} NAME_WE)
    add_example(${benchmark_name} ${benchmark_file})
endforeach()
